--- a/inicio.html
+++ b/inicio.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Riego</title>
-    <link rel="stylesheet" href="inicio.css">
+    <title>Sistema de Riego - UTU</title>
+    <link rel="stylesheet" href="styles/inicio.css">
 </head>
 
 <body>
     <div class="container">
         <nav class="menu">
-            <img src="1-Photoroom.png" alt="" width="150">
+            <img src="img/1-Photoroom.png" alt="" width="150">
 
             <ul class="menu">
-                <li><a href="inicio.html">Inicio</a></li>
+                <li> <a href="inicio.html">Inicio</a> </li>
+                
                 <li class="submenu">
                     <a href="#">Mediciones</a>
                     <ul class="submenu-der">
@@ -21,17 +23,21 @@
                         <li><a href="materiales.html">Materiales</a></li>
                     </ul>
                 </li>
+
                 <li class="submenu">
-                    <a href="#">Herramientas</a>
+                    <a href="#">Proyecto</a>
                     <ul class="submenu-der">
                         <li><a href="#">Herramienta 1</a></li>
                         <li><a href="#">Herramienta 2</a></li>
                         <li><a href="#">Herramienta 3</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Contacto</a></li>
+
+                <li> <a href="#">FAQ</a> </li>
+
+                <li> <a href="#">Contacto</a> </li>
             </ul>
-            
+
         </nav>
         <main class="content">
             <h1>Bienvenidos</h1>
@@ -40,12 +46,13 @@
         <aside class="sidebar">
             <br>
             <br>
-            <br> <br> 
+            <br> <br>
             <h3>Preguntas frecuentes</h3>
             <br>
             <br>
             <br>
-                        <a href="funcionamiento.html">¿Cómo funciona?</a>
+            <a href="funcionamiento.html">¿Cómo funciona?</a>
         </aside>
     </div>
+
 </html>
