Cambio en el CSS de main.css

--- a/funcionamiento.html
+++ b/funcionamiento.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preguntas</title>
-    <link rel="stylesheet" href="funcionamiento.css">
+    <link rel="stylesheet" href="styles/funcionamiento.css">
 </head>
 <body>
     <div class="container">
