--- a/materiales.html
+++ b/materiales.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Materiales</title>
-    <link rel="stylesheet" href="materiales.css">
+    <link rel="stylesheet" href="styles/materiales.css">
 </head>
 <body>
     <div class="container">
