Se agrego CSS a mediciones

--- a/inicio.html
+++ b/inicio.html
@@ -15,7 +15,7 @@
                 <img src="logotipo.svg" alt="" width="150">
             </div>
             <ul class="menu">
-                <li> <a href="inicio.html">Inicio   ←</a> </li>
+                <li> <a href="inicio.html">Inicio←</a> </li>
 
                 <li class="submenu">
                     <a href="mediciones.html">Mediciones</a>
@@ -61,21 +61,23 @@
             <h2>Preguntas frecuentes</h2>
             <ul>
                 <li>
-                    <h3>¿Cómo funciona?</h3>
+                    <h3>⇨ ¿Cómo funciona?</h3>
                     <p>En nuestra sección sobre el <a href="funcionamiento.html">funcionamiento</a> del proyecto
                         explicamos detalladamente como se logra la automatización.</p>
                 </li>
                 <li>
-                    <h3>¿Tienen estadísticas?</h3>
+                    <h3>⇨ ¿Tienen estadísticas?</h3>
                     <p>En nuestro sistema manejamos el uso de <a href="mediciones.html#estadísticas">estadísticas</a> de
                         un máximo 3 meses anteriores.</p>
                 </li>
                 <li>
-                    <h3>¿Qué placa utilizan?</h3>
+                    <h3>⇨ ¿Qué placa utilizan?</h3>
                     <p>En este proyecto utilizamos una placa programable <b>ESP8266</b>. Puedes encontrar más
                         información <a href="materiales.html#esp8266">aquí</a>.</p>
                 </li>
-                <li></li>
+                <li>
+                    <h3><a href="faq.html">Ver más preguntas...</a></h3>
+                </li>
             </ul>
         </aside>
     </div>
