--- a/mediciones.html
+++ b/mediciones.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mediciones</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/mediciones.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
@@ -15,10 +17,10 @@
                 <img src="logotipo.svg" alt="" width="150">
             </div>
             <ul class="menu">
-                <li> <a href="inicio.html">Inicio ←</a> </li>
+                <li> <a href="inicio.html">Inicio</a> </li>
 
                 <li class="submenu">
-                    <a href="mediciones.html">Mediciones</a>
+                    <a href="mediciones.html">Mediciones ←</a>
                 </li>
 
                 <li class="submenu">
@@ -37,8 +39,35 @@
             <div id="imagen-menu">
                 <img src="img/img-rama-fotor-20241116231258.png" alt="">
             </div>
-            <main id="estadísticas"></main>
         </nav>
+
+        <main class="contenido">
+            <h1>Mediciones Actuales</h1>
+            <p>Mediciones en tiempo real de los sensores integrados de humedad, temperatura y humedad del suelo.</p>
+            <div class="container">
+                <div class="carta">
+                    <h3>Humedad</h3>
+                    <div class="valor">71%</div>
+                </div>
+                <div class="carta">
+                    <h3>Temperatura</h3>
+                    <div class="valor">28°C</div>
+                </div>
+                <div class="carta">
+                    <h3>Humedad Del Suelo</h3>
+                    <div class="valor">24.57%</div>
+                </div>
+            </div>
+
+            <h1 class="estadisticas">Estadísticas</h1>
+            <h2>Semanal</h2>
+            <canvas id="grafica7Dias" width="400" height="200"></canvas>
+            <h2>Mensual</h2>
+            <canvas id="graficaMes" width="400" height="200"></canvas>
+            <h2>Historial a 3 meses</h2>
+            <canvas id="grafica3Meses" width="400" height="200"></canvas>
+            <script src="script.js"></script>
+        </main>
     </div>
 </body>
 
