Se agrego estilo a FAQ

--- a/inicio.html
+++ b/inicio.html
@@ -12,7 +12,7 @@
     <div class="contenedor">
         <nav class="menu">
             <div id="logo">
-                <img src="logotipo.svg" alt="" width="150">
+                <img src="img/logotipo.svg" alt="" width="150">
             </div>
             <ul class="menu">
                 <li> <a href="inicio.html">Inicio←</a> </li>
@@ -30,9 +30,9 @@
                     </ul>
                 </li>
 
-                <li> <a href="#">FAQ</a> </li>
+                <li> <a href="faq.html">FAQ</a> </li>
 
-                <li> <a href="#">Contacto</a> </li>
+                <li> <a href="contacto.html">Contacto</a> </li>
             </ul>
             <div id="imagen-menu">
                 <img src="img/img-rama-fotor-20241116231258.png" alt="">
@@ -81,5 +81,5 @@
             </ul>
         </aside>
     </div>
-
+</body>
 </html>
