--- a/mediciones.html
+++ b/mediciones.html
@@ -14,7 +14,7 @@
     <div class="contenedor">
         <nav class="menu">
             <div id="logo">
-                <img src="logotipo.svg" alt="" width="150">
+                <img src="img/logotipo.svg" alt="" width="150">
             </div>
             <ul class="menu">
                 <li> <a href="inicio.html">Inicio</a> </li>
@@ -32,7 +32,7 @@
                     </ul>
                 </li>
 
-                <li> <a href="#">FAQ</a> </li>
+                <li> <a href="faq.html">FAQ</a> </li>
 
                 <li> <a href="#">Contacto</a> </li>
             </ul>
