--- a/materiales.html
+++ b/materiales.html
@@ -1,53 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Materiales</title>
+    <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/materiales.css">
 </head>
-<body>
-    <div class="container">
-        <nav class="menu">
-            <img src="1-Photoroom.png" alt="" width="150">
 
+<body>
+    <div class="contenedor">
+        <nav class="menu">
+            <div id="logo">
+                <img src="img/logotipo.svg" alt="" width="150">
+            </div>
             <ul class="menu">
-                <li><a href="inicio.html">Inicio</a></li>
+                <li> <a href="inicio.html">Inicio←</a> </li>
+
                 <li class="submenu">
-                    <a href="#">Mediciones</a>
+                    <a href="mediciones.html">Mediciones</a>
+                </li>
+
+                <li class="submenu">
+                    <a href="#">Proyecto</a>
                     <ul class="submenu-der">
-                        <li><a href="humedad.html">Mediciones actuales</a></li>
                         <li><a href="materiales.html">Materiales</a></li>
+                        <li><a href="funcionamiento.html">Funcionamiento</a></li>
+                        <li><a href="paso_a_paso.html">Paso a Paso</a></li>
                     </ul>
                 </li>
-                <li class="submenu">
-                    <a href="#">Sobre el proyecto</a>
-                    <ul class="submenu-der">
-                        <li><a href="#">Herramienta 1</a></li>
-                        <li><a href="#">Herramienta 2</a></li>
-                        <li><a href="#">Herramienta 3</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Contacto</a></li>
+
+                <li> <a href="faq.html">FAQ</a> </li>
+
+                <li> <a href="#">Contacto</a> </li>
             </ul>
-            
+            <div id="imagen-menu">
+                <img src="img/img-rama-fotor-20241116231258.png" alt="">
+            </div>
         </nav>
-        <main class="content">
-            <h1>Bienvenidos</h1>
-            <p>Este es el contenido principal que aparecerá en el centro de la página.</p>
-            <img src="sensor-temperatura-y-humedad-dht22-Photoroom.png" class="animacion-giro-rapido" alt="">
+
+        <main class="contenido">
+            <h1>Materiales</h1>
+            <p>Descripciones detalladas de los materiales <i>(Ponga el mouse por encima de cada tarjeta para ver más)</i></p>
+            <h2>Componentes de IoT</h2>
+            <div class="seccion-tarjetas">
+                <div class="tarjeta">
+                    <div class="frente">
+                        <img src="img/esp8266.webp" alt="Componente 1">
+                        <h3>ESP8266</h3>
+                    </div>
+                    <div class="detras">
+                        <p>
+                            Es el componente central del sistema, es la placa programable utilizada para recibir y
+                            recopilar los datos obtenidos de los sensores y los envía al servidor. Procesa los datos y
+                            las condiciones establecidas. Es el "cerebro" del sistema.
+                        </p>
+                    </div>
+                </div>
+                <div class="tarjeta">
+                    <div class="frente">
+                        <img src="img/sensor-temperatura-y-humedad-dht22-Photoroom.png" alt="Componente 2">
+                        <h3>DHT22</h3>
+                    </div>
+                    <div class="detras">
+                        <p>
+                            El DHT22 es un sensor digital que mide temperatura y humedad. Utiliza un sensor capacitivo para la humedad y un termistor para la temperatura, proporcionando lecturas precisas. Sus margenes de error son ± 0.5 °C y ± 2-5% de humedad.
+                        </p>
+                    </div>
+                </div>
+                <div class="tarjeta">
+                    <div class="frente">
+                        <img src="img/yl-69.webp" alt="Componente 3">
+                        <h3>YL - 69</h3>
+                    </div>
+                    <div class="detras">
+                        <p>
+                            El sensor YL-69 se encarga de medir la humedad del suelo. Incluye un módulo de comparación y una sonda que mide la resistencia del suelo. Funciona aplicando corriente entre las sondas y detectando la resistencia según la humedad del suelo. 
+                        </p>
+                    </div>
+                </div>
+                <div class="tarjeta">
+                    <div class="frente">
+                        <img src="img/fc-37.webp" alt="Componente 4">
+                        <h3>FC - 37</h3>
+                    </div>
+                    <div class="detras">
+                        <p>
+                            El sensor de lluvia FC-37 es un dispositivo utilizado para detectar la presencia de agua o lluvia. Está compuesto por dos partes: un módulo sensor que detecta la humedad en su superficie y un módulo de control que procesa la señal del sensor.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <h2>Componente de Servidor.</h2>
+            <div class="seccion-tarjetas">   
+                <div class="tarjeta servidor">
+                    <div class="frente">
+                        <img src="img/raspberry_pi.webp" alt="Componente 5">
+                        <h3>Raspberry Pi</h3>
+                    </div>
+                    <div class="detras">
+                        <p>
+                            La Raspberry Pi es una serie de computadoras de placa única de bajo costo y tamaño compacto, diseñadas inicialmente con fines educativos, pero ampliamente utilizadas en una variedad de proyectos de tecnología, electrónica y robótica. Fue creada por la Fundación Raspberry Pi en el Reino Unido, con el objetivo de promover la enseñanza de ciencias de la computación y la programación en países en desarrollo y en todo el mundo.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </main>
-        <aside class="sidebar">
-            <br>
-            <br>
-            <br> <br> 
-            <h3>Preguntas frecuentes</h3>
-            <br>
-            <br>
-            <br>
-                        <a href="funcionamiento.html">¿Cómo funciona?</a>
-        </aside>
-        </div>
-      
+
+    </div>
 </body>
+
 </html>
