Se agregó el estilo de Contacto

--- a/materiales.html
+++ b/materiales.html
@@ -25,7 +25,7 @@
                 <li class="submenu">
                     <a href="#">Proyecto</a>
                     <ul class="submenu-der">
-                        <li><a href="materiales.html">Materiales</a></li>
+                        <li><a href="materiales.html">Materiales ←</a></li>
                         <li><a href="funcionamiento.html">Funcionamiento</a></li>
                         <li><a href="paso_a_paso.html">Paso a Paso</a></li>
                     </ul>
