--- a/mediciones.html
+++ b/mediciones.html
@@ -34,7 +34,7 @@
 
                 <li> <a href="faq.html">FAQ</a> </li>
 
-                <li> <a href="#">Contacto</a> </li>
+                <li> <a href="contacto.html">Contacto</a> </li>
             </ul>
             <div id="imagen-menu">
                 <img src="img/img-rama-fotor-20241116231258.png" alt="">
