--- a/inicio.html
+++ b/inicio.html
@@ -84,5 +84,8 @@
             </ul>
         </aside>
     </div>
+    <footer class="pie-pagina">
+        <p>&copy; 2024 2BH Informática, alumnos Kehian Martins, Mateo Parentini, Bernardo Arregín. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
