Se agregó el estilo al paso_a_paso

--- a/inicio.html
+++ b/inicio.html
@@ -39,7 +39,7 @@
             </div>
         </nav>
         <main class="contenido">
-            <div id="titulo">
+            <div class="titulo inicio">
                 <h1>S. A. R. M. P</h1>
                 <h2>Sistema Automatizado de Riego y Monitoreo de Plantaciones</h2>
             </div>
