--- a/contacto.html
+++ b/contacto.html
@@ -61,5 +61,8 @@
             </section>
         </main>
     </div>
+    <footer class="pie-pagina">
+        <p>&copy; 2024 2BH Informática, alumnos Kehian Martins, Mateo Parentini, Bernardo Arregín. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
