--- a/faq.html
+++ b/faq.html
@@ -40,7 +40,9 @@
             </div>
         </nav>
         <main class="contenido">
-            <h1>Preguntas Frecuentes</h1>
+            <div class="titulo">
+                <h1>Preguntas Frequentes</h1>
+            </div>
 
             <div class="item-faq">
                 <input type="checkbox" id="faq1" class="faq-checkbox">
@@ -81,6 +83,9 @@
             <p class="contacto">¿Tienes una pregunta y no la ves aquí? <a href="contacto.html">¡Contactanos!</a></p>
         </main>
     </div>
+    <footer class="pie-pagina">
+        <p>&copy; 2024 2BH Informática, alumnos Kehian Martins, Mateo Parentini, Bernardo Arregín. Todos los derechos reservados.</p>
+    </footer>
 </body>
 
 </html>
