--- a/inicio.html
+++ b/inicio.html
@@ -58,7 +58,7 @@
         </main>
 
         <aside class="sidebar">
-            <h2>Preguntas frecuentes</h2>
+            <h2 style="margin: 0;">Preguntas frecuentes</h2>
             <ul>
                 <li>
                     <h3>⇨ ¿Cómo funciona?</h3>
