--- a/materiales.html
+++ b/materiales.html
@@ -16,7 +16,7 @@
                 <img src="img/logotipo.svg" alt="" width="150">
             </div>
             <ul class="menu">
-                <li> <a href="inicio.html">Inicio←</a> </li>
+                <li> <a href="inicio.html">Inicio</a> </li>
 
                 <li class="submenu">
                     <a href="mediciones.html">Mediciones</a>
@@ -41,8 +41,11 @@
         </nav>
 
         <main class="contenido">
-            <h1>Materiales</h1>
-            <p>Descripciones detalladas de los materiales <i>(Ponga el mouse por encima de cada tarjeta para ver más)</i></p>
+            <div class="titulo">
+                <h1>Materiales</h1>
+            </div>
+            <p>Descripciones detalladas de los materiales <i>(Ponga el mouse por encima de cada tarjeta para ver
+                    más)</i></p>
             <h2>Componentes de IoT</h2>
             <div class="seccion-tarjetas">
                 <div class="tarjeta">
@@ -65,7 +68,9 @@
                     </div>
                     <div class="detras">
                         <p>
-                            El DHT22 es un sensor digital que mide temperatura y humedad. Utiliza un sensor capacitivo para la humedad y un termistor para la temperatura, proporcionando lecturas precisas. Sus margenes de error son ± 0.5 °C y ± 2-5% de humedad.
+                            El DHT22 es un sensor digital que mide temperatura y humedad. Utiliza un sensor capacitivo
+                            para la humedad y un termistor para la temperatura, proporcionando lecturas precisas. Sus
+                            margenes de error son ± 0.5 °C y ± 2-5% de humedad.
                         </p>
                     </div>
                 </div>
@@ -76,7 +81,9 @@
                     </div>
                     <div class="detras">
                         <p>
-                            El sensor YL-69 se encarga de medir la humedad del suelo. Incluye un módulo de comparación y una sonda que mide la resistencia del suelo. Funciona aplicando corriente entre las sondas y detectando la resistencia según la humedad del suelo. 
+                            El sensor YL-69 se encarga de medir la humedad del suelo. Incluye un módulo de comparación y
+                            una sonda que mide la resistencia del suelo. Funciona aplicando corriente entre las sondas y
+                            detectando la resistencia según la humedad del suelo.
                         </p>
                     </div>
                 </div>
@@ -87,13 +94,15 @@
                     </div>
                     <div class="detras">
                         <p>
-                            El sensor de lluvia FC-37 es un dispositivo utilizado para detectar la presencia de agua o lluvia. Está compuesto por dos partes: un módulo sensor que detecta la humedad en su superficie y un módulo de control que procesa la señal del sensor.
+                            El sensor de lluvia FC-37 es un dispositivo utilizado para detectar la presencia de agua o
+                            lluvia. Está compuesto por dos partes: un módulo sensor que detecta la humedad en su
+                            superficie y un módulo de control que procesa la señal del sensor.
                         </p>
                     </div>
                 </div>
             </div>
             <h2>Componente de Servidor.</h2>
-            <div class="seccion-tarjetas">   
+            <div class="seccion-tarjetas">
                 <div class="tarjeta servidor">
                     <div class="frente">
                         <img src="img/raspberry_pi.webp" alt="Componente 5">
@@ -101,14 +110,20 @@
                     </div>
                     <div class="detras">
                         <p>
-                            La Raspberry Pi es una serie de computadoras de placa única de bajo costo y tamaño compacto, diseñadas inicialmente con fines educativos, pero ampliamente utilizadas en una variedad de proyectos de tecnología, electrónica y robótica. Fue creada por la Fundación Raspberry Pi en el Reino Unido, con el objetivo de promover la enseñanza de ciencias de la computación y la programación en países en desarrollo y en todo el mundo.
+                            La Raspberry Pi es una serie de computadoras de placa única de bajo costo y tamaño compacto,
+                            diseñadas inicialmente con fines educativos, pero ampliamente utilizadas en una variedad de
+                            proyectos de tecnología, electrónica y robótica. Fue creada por la Fundación Raspberry Pi en
+                            el Reino Unido, con el objetivo de promover la enseñanza de ciencias de la computación y la
+                            programación en países en desarrollo y en todo el mundo.
                         </p>
                     </div>
                 </div>
             </div>
         </main>
-
     </div>
+    <footer class="pie-pagina">
+        <p>&copy; 2024 2BH Informática, alumnos Kehian Martins, Mateo Parentini, Bernardo Arregín. Todos los derechos reservados.</p>
+    </footer>
 </body>
 
 </html>
