--- a/contacto.html
+++ b/contacto.html
@@ -40,7 +40,10 @@
             </div>
         </nav>
         <main class="contenido">
-            <h1>Contacto</h1>
+            <div class="titulo">
+                <h1>Contacto</h1>
+            </div>
+            
             <p>El proyecto posee un correo electrónico oficial donde usted puede contactarnos para cualquier duda, dicho correo es: <b id="email">proyecto.riego.utu@gmail.com</b></p>
             <p>De cualquier manera, en este formulario usted puede contactarnos para cualquier consulta. Rellene todos los campos.</p>
             <section class="frm-contacto">
