--- a/funcionamiento.html
+++ b/funcionamiento.html
@@ -12,26 +12,32 @@
 <body>
     <div class="contenedor">
         <nav class="menu">
-            <img src="img/logotipo.svg" alt="" width="150">
-
+            <div id="logo">
+                <img src="img/logotipo.svg" alt="" width="150">
+            </div>
             <ul class="menu">
-                <li><a href="inicio.html">Inicio</a></li>
+                <li> <a href="inicio.html">Inicio</a> </li>
+
                 <li class="submenu">
                     <a href="mediciones.html">Mediciones</a>
-
                 </li>
+
                 <li class="submenu">
                     <a href="#">Proyecto</a>
                     <ul class="submenu-der">
                         <li><a href="materiales.html">Materiales</a></li>
-                        <li><a href="funcionamiento.html">Funcionamiento</a></li>
+                        <li><a href="funcionamiento.html">Funcionamiento←</a></li>
                         <li><a href="paso_a_paso.html">Paso a Paso</a></li>
                     </ul>
                 </li>
-                <li><a href="faq.html">FAQ</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
 
+                <li> <a href="faq.html">FAQ</a> </li>
+
+                <li> <a href="contacto.html">Contacto</a> </li>
+            </ul>
+            <div id="imagen-menu">
+                <img src="img/img-rama-fotor-20241116231258.png" alt="">
+            </div>
         </nav>
         <main class="contenido">
             <div class="titulo">
