--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,7 @@
                 <img src="img/logotipo.svg" alt="" width="150">
             </div>
             <ul class="menu">
-                <li> <a href="inicio.html">Inicio←</a> </li>
+                <li> <a href="inicio.html">Inicio</a> </li>
 
                 <li class="submenu">
                     <a href="mediciones.html">Mediciones</a>
@@ -33,7 +33,7 @@
 
                 <li> <a href="faq.html">FAQ ←</a> </li>
 
-                <li> <a href="contacto.html">Contacto ←</a> </li>
+                <li> <a href="contacto.html">Contacto</a> </li>
             </ul>
             <div id="imagen-menu">
                 <img src="img/img-rama-fotor-20241116231258.png" alt="">
@@ -47,8 +47,10 @@
             <div class="item-faq">
                 <input type="checkbox" id="faq1" class="faq-checkbox">
                 <label for="faq1" class="pregunta-faq">↦ ¿Cómo funciona el sistema de riego automatizado?</label>
-                <p class="respuesta-faq">El sistema utiliza sensores de humedad en el suelo para determinar cuándo las
-                    plantas necesitan agua y activa automáticamente el riego en esos momentos.</p>
+                <p class="respuesta-faq">
+                    El sistema utiliza sensores de humedad en el suelo para determinar cuándo las
+                    plantas necesitan agua y activa automáticamente el riego en esos momentos.
+                </p>
             </div>
 
             <div class="item-faq">
