--- a/mediciones.html
+++ b/mediciones.html
@@ -17,7 +17,7 @@
                 <img src="img/logotipo.svg" alt="" width="150">
             </div>
             <ul class="menu">
-                <li> <a href="inicio.html">Inicio</a> </li>
+                <li> <a href="index.html">Inicio</a> </li>
 
                 <li class="submenu">
                     <a href="mediciones.html">Mediciones ←</a>
